--- a/src/gui/view/ViewOperacoes.fxml
+++ b/src/gui/view/ViewOperacoes.fxml
@@ -4,6 +4,8 @@
 <?import javafx.scene.control.CheckBox?>
 <?import javafx.scene.control.DatePicker?>
 <?import javafx.scene.control.Label?>
+<?import javafx.scene.control.ProgressIndicator?>
+<?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.Spinner?>
 <?import javafx.scene.control.TableColumn?>
 <?import javafx.scene.control.TableView?>
@@ -312,7 +314,7 @@
                         </ImageView>
                      </graphic>
                   </Button>
-                  <Button fx:id="btPesquisar" layoutX="135.0" layoutY="136.0" mnemonicParsing="false" onAction="#selecionaMes" prefHeight="29.0" prefWidth="104.0" text="Pesquisar">
+                  <Button fx:id="btPesquisar" layoutX="135.0" layoutY="136.0" mnemonicParsing="false" onAction="#buscaOperacoes" prefHeight="29.0" prefWidth="104.0" text="Pesquisar">
                      <graphic>
                         <ImageView fitHeight="28.0" fitWidth="21.0" pickOnBounds="true" preserveRatio="true">
                            <image>
@@ -321,34 +323,33 @@
                         </ImageView>
                      </graphic>
                   </Button>
+                  <CheckBox fx:id="cbData" layoutX="166.0" layoutY="44.0" mnemonicParsing="false" text="Data Única" />
                </children>
             </Pane>
          </children>
       </Pane>
       <Pane layoutX="9.0" layoutY="175.0" prefHeight="95.0" prefWidth="662.0" style="-fx-background-color: #E9E9E9;">
          <children>
-            <Pane layoutX="329.0" layoutY="9.0" prefHeight="78.0" prefWidth="323.0" style="-fx-border-color: #7a7a7a;">
+            <Pane layoutX="257.0" layoutY="9.0" prefHeight="37.0" prefWidth="375.0" style="-fx-border-color: #7a7a7a;">
                <children>
-                  <GridPane layoutX="11.0" layoutY="10.0" prefHeight="58.0" prefWidth="323.0">
+                  <GridPane layoutX="21.0" layoutY="3.0" prefHeight="32.0" prefWidth="352.0">
                     <columnConstraints>
-                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="156.0" minWidth="10.0" prefWidth="149.0" />
-                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="180.0" minWidth="10.0" prefWidth="90.0" />
-                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="273.0" minWidth="10.0" prefWidth="86.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="156.0" minWidth="10.0" prefWidth="87.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="193.0" minWidth="10.0" prefWidth="144.0" />
+                      <ColumnConstraints hgrow="SOMETIMES" maxWidth="273.0" minWidth="10.0" prefWidth="49.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="273.0" minWidth="10.0" prefWidth="68.0" />
                     </columnConstraints>
                     <rowConstraints>
                       <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                     </rowConstraints>
                      <children>
-                        <CheckBox fx:id="cbData" mnemonicParsing="false" text="Data Única" GridPane.columnIndex="1" />
-                        <CheckBox fx:id="cbId" mnemonicParsing="false" text="ID" GridPane.columnIndex="2" />
-                        <CheckBox fx:id="cbFormaPagamento" mnemonicParsing="false" text="Forma de Pagamento" GridPane.rowIndex="1" />
-                        <CheckBox fx:id="cbDespesa" mnemonicParsing="false" text="Despesa" GridPane.columnIndex="2" GridPane.rowIndex="1" />
-                        <CheckBox fx:id="cbReceita" mnemonicParsing="false" text="Receita" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                        <CheckBox fx:id="cbDescricao" mnemonicParsing="false" text="Descrição" />
+                        <RadioButton fx:id="rbDescricao" mnemonicParsing="false" text="Descrição" />
+                        <RadioButton fx:id="rbId" mnemonicParsing="false" text="ID" GridPane.columnIndex="2" />
+                        <RadioButton fx:id="rbFormaPagamento" mnemonicParsing="false" text="Forma de Pagamento" GridPane.columnIndex="1" />
+                        <RadioButton fx:id="rbTodos" mnemonicParsing="false" selected="true" text="Todos" GridPane.columnIndex="3" />
                      </children>
                   </GridPane>
-                  <Label alignment="CENTER" contentDisplay="CENTER" layoutX="11.0" layoutY="-8.0" prefHeight="17.0" prefWidth="52.0" style="-fx-background-color: #E9E9E9;" text="Filtros" textAlignment="CENTER">
+                  <Label alignment="CENTER" contentDisplay="CENTER" layoutX="10.0" layoutY="-8.0" prefHeight="17.0" prefWidth="52.0" style="-fx-background-color: #E9E9E9;" text="Filtros" textAlignment="CENTER">
                      <font>
                         <Font name="System Bold" size="12.0" />
                      </font>
@@ -382,6 +383,43 @@
                   </Button>
                </children>
             </Pane>
+            <Pane layoutX="257.0" layoutY="53.0" prefHeight="37.0" prefWidth="225.0" style="-fx-border-color: #7a7a7a;">
+               <children>
+                  <GridPane layoutX="17.0" layoutY="3.0" prefHeight="32.0" prefWidth="202.0">
+                     <columnConstraints>
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="156.0" minWidth="10.0" prefWidth="75.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="193.0" minWidth="10.0" prefWidth="67.0" />
+                        <ColumnConstraints hgrow="SOMETIMES" maxWidth="273.0" minWidth="10.0" prefWidth="63.0" />
+                     </columnConstraints>
+                     <rowConstraints>
+                        <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                     </rowConstraints>
+                     <children>
+                        <RadioButton fx:id="rbDespesa" mnemonicParsing="false" text="Despesa" />
+                        <RadioButton fx:id="rbReceita" mnemonicParsing="false" text="Receita" GridPane.columnIndex="1" />
+                        <RadioButton fx:id="rbTodos1" mnemonicParsing="false" selected="true" text="Todos" GridPane.columnIndex="2" />
+                     </children>
+                  </GridPane>
+                  <Label alignment="CENTER" contentDisplay="CENTER" layoutX="9.0" layoutY="-7.0" prefHeight="17.0" prefWidth="52.0" style="-fx-background-color: #E9E9E9;" text="Filtros" textAlignment="CENTER">
+                     <font>
+                        <Font name="System Bold" size="12.0" />
+                     </font>
+                  </Label>
+               </children>
+            </Pane>
+            <GridPane layoutX="505.0" layoutY="57.0" prefHeight="30.0" prefWidth="149.0">
+              <columnConstraints>
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="113.0" minWidth="10.0" prefWidth="113.0" />
+                <ColumnConstraints hgrow="SOMETIMES" maxWidth="70.0" minWidth="10.0" prefWidth="36.0" />
+              </columnConstraints>
+              <rowConstraints>
+                <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+              </rowConstraints>
+               <children>
+                  <Label fx:id="lbStatus" alignment="CENTER_RIGHT" contentDisplay="RIGHT" prefHeight="17.0" prefWidth="108.0" text="Carregando" visible="false" />
+                  <ProgressIndicator fx:id="piStatus" prefHeight="30.0" prefWidth="84.0" visible="false" GridPane.columnIndex="1" />
+               </children>
+            </GridPane>
          </children>
       </Pane>
       <Pane prefHeight="32.0" prefWidth="961.0" style="-fx-background-color: #243a51;" AnchorPane.leftAnchor="0.0" AnchorPane.rightAnchor="0.0">
