--- a/src/gui/view/ViewPacote.fxml
+++ b/src/gui/view/ViewPacote.fxml
@@ -18,7 +18,7 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.layout.VBox?>
 
-<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="504.0" prefWidth="683.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controllers.ViewPacoteController">
+<AnchorPane maxHeight="-Infinity" maxWidth="-Infinity" minHeight="-Infinity" minWidth="-Infinity" prefHeight="504.0" prefWidth="683.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controllers.ViewPacoteController">
    <children>
       <TabPane prefHeight="504.0" prefWidth="683.0" tabClosingPolicy="UNAVAILABLE">
         <tabs>
@@ -145,23 +145,26 @@
                         </TableView>
                         <Pane layoutX="10.0" layoutY="330.0" prefHeight="135.0" prefWidth="384.0" style="-fx-border-color: #cccccc;">
                            <children>
-                              <GridPane layoutX="12.0" layoutY="13.0" prefHeight="72.0" prefWidth="273.0">
+                              <GridPane layoutX="12.0" layoutY="13.0" prefHeight="92.0" prefWidth="245.0">
                                 <columnConstraints>
-                                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="133.0" minWidth="10.0" prefWidth="53.0" />
-                                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="224.0" minWidth="10.0" prefWidth="224.0" />
+                                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="133.0" minWidth="10.0" prefWidth="121.0" />
+                                  <ColumnConstraints hgrow="SOMETIMES" maxWidth="224.0" minWidth="10.0" prefWidth="124.0" />
                                 </columnConstraints>
                                 <rowConstraints>
                                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                                   <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
+                                    <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
                                 </rowConstraints>
                                  <children>
                                     <TextField fx:id="tfCliente" GridPane.columnIndex="1" />
-                                    <ChoiceBox fx:id="cbPacote" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                                    <ChoiceBox fx:id="cbPacote" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="2" />
                                     <Label text="Cliente" />
-                                    <Label text="Pacote" GridPane.rowIndex="1" />
+                                    <Label text="Pacote" GridPane.rowIndex="2" />
+                                    <ChoiceBox fx:id="cbFormaDePagamento" prefWidth="150.0" GridPane.columnIndex="1" GridPane.rowIndex="1" />
+                                    <Label text="Forma de pagamento:" GridPane.rowIndex="1" />
                                  </children>
                               </GridPane>
-                              <Button fx:id="btAddAssociacao" layoutX="170.0" layoutY="96.0" mnemonicParsing="false" onAction="#onBtCriaAssociacaoAction" text="Adicionar">
+                              <Button fx:id="btAddAssociacao" layoutX="282.0" layoutY="95.0" mnemonicParsing="false" onAction="#onBtCriaAssociacaoAction" text="Adicionar">
                                  <graphic>
                                     <ImageView fitHeight="22.0" fitWidth="47.0" pickOnBounds="true" preserveRatio="true">
                                        <image>
@@ -170,7 +173,7 @@
                                     </ImageView>
                                  </graphic>
                               </Button>
-                              <Button fx:id="btExcluiAssociacao" layoutX="285.0" layoutY="96.0" mnemonicParsing="false" onAction="#onBtExcluiAssociacaoAction" text="Excluir">
+                              <Button fx:id="btExcluiAssociacao" layoutX="298.0" layoutY="55.0" mnemonicParsing="false" onAction="#onBtExcluiAssociacaoAction" text="Excluir">
                                  <graphic>
                                     <ImageView fitHeight="22.0" fitWidth="47.0" pickOnBounds="true" preserveRatio="true">
                                        <image>
