--- a/bin/gui/view/ViewCaixa.fxml
+++ b/bin/gui/view/ViewCaixa.fxml
@@ -21,7 +21,7 @@
 <?import javafx.scene.shape.Line?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="695.0" prefWidth="1366.0" xmlns="http://javafx.com/javafx/11.0.1" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controllers.ViewCaixaController">
+<AnchorPane minHeight="-Infinity" minWidth="-Infinity" prefHeight="695.0" prefWidth="1366.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controllers.ViewCaixaController">
    <children>
       <Line endX="1205.0" layoutX="161.0" layoutY="35.0" startX="-161.0" stroke="#827f7f" />
       <Button fx:id="btAbrirFecharCaixa" layoutX="45.0" layoutY="46.0" mnemonicParsing="false" onAction="#onBtAbrirFecharCaixaAction" prefHeight="63.0" prefWidth="164.0">
@@ -38,7 +38,7 @@
       <Line endX="1255.0" layoutX="111.0" layoutY="137.0" startX="-110.0" stroke="#827f7f" />
       <Line endX="100.0" endY="561.0" layoutX="155.0" layoutY="134.0" startX="100.0" startY="-98.0" stroke="#827f7f" />
       <Label layoutX="43.0" layoutY="287.0" text="Data:" />
-      <DatePicker fx:id="dpData" layoutX="9.0" layoutY="305.0" prefHeight="25.0" prefWidth="150.0" />
+      <DatePicker fx:id="dpData" disable="true" layoutX="9.0" layoutY="305.0" prefHeight="25.0" prefWidth="150.0" />
       <TextField fx:id="tfValor" layoutX="10.0" layoutY="366.0" prefHeight="26.0" prefWidth="151.0" />
       <Label layoutX="41.0" layoutY="348.0" text="Valor:" />
       <Button fx:id="btEnviarTransacao" layoutX="266.0" layoutY="651.0" mnemonicParsing="false" onAction="#onBtEnviarTransacaoAction" text="Adicionar">
@@ -227,7 +227,7 @@
             <ProgressIndicator fx:id="piStatus" visible="false" GridPane.columnIndex="1" />
          </children>
       </GridPane>
-      <Button fx:id="btAjuda" layoutX="1278.0" layoutY="3.0" mnemonicParsing="false" onAction="#onBtAjudaAction" text="Ajuda">
+      <Button fx:id="btAjuda" layoutX="1286.0" layoutY="3.0" mnemonicParsing="false" onAction="#onBtAjudaAction" text="Ajuda">
          <graphic>
             <ImageView fitHeight="19.0" fitWidth="61.0" pickOnBounds="true" preserveRatio="true">
                <image>
@@ -287,7 +287,7 @@
          </image>
       </ImageView>
       <CheckBox fx:id="cbBloqueiaPreco" layoutX="170.0" layoutY="370.0" mnemonicParsing="false" onAction="#bloqDesbloqValor" selected="true" text="Liberar /" wrapText="true" />
-      <DatePicker fx:id="dpSelecao" editable="false" layoutX="1128.0" layoutY="4.0" onAction="#carregaTransacao" prefHeight="26.0" prefWidth="140.0" />
+      <DatePicker fx:id="dpSelecao" editable="false" layoutX="1039.0" layoutY="4.0" onAction="#carregaTransacao" prefHeight="26.0" prefWidth="140.0" />
       <GridPane layoutX="1122.0" layoutY="41.0" prefHeight="91.0" prefWidth="234.0">
         <columnConstraints>
           <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
@@ -377,5 +377,14 @@
         </tabs>
       </TabPane>
       <Label layoutX="194.0" layoutY="386.0" text="Bloq" />
+      <Button fx:id="btAtualizar" layoutX="1188.0" layoutY="3.0" mnemonicParsing="false" onAction="#carregaTransacao" prefHeight="27.0" prefWidth="88.0" text="Atualizar">
+         <graphic>
+            <ImageView fitHeight="19.0" fitWidth="61.0" pickOnBounds="true" preserveRatio="true">
+               <image>
+                  <Image url="@../../model/images/icons8_restart_96px_1.png" />
+               </image>
+            </ImageView>
+         </graphic>
+      </Button>
    </children>
 </AnchorPane>
