--- a/src/gui/view/ViewReceita.fxml
+++ b/src/gui/view/ViewReceita.fxml
@@ -29,7 +29,7 @@
                </children>
             </Pane>
             <TextField fx:id="tfDescricao" layoutX="49.0" layoutY="83.0" prefHeight="25.0" prefWidth="225.0" promptText=" Descrição da receita" />
-            <DatePicker fx:id="dpData" layoutX="48.0" layoutY="145.0" prefHeight="25.0" prefWidth="149.0" />
+            <DatePicker fx:id="dpData" disable="true" layoutX="48.0" layoutY="145.0" prefHeight="25.0" prefWidth="149.0" />
             <TextField fx:id="tfEntrada" layoutX="48.0" layoutY="206.0" promptText="Valor de receita" />
             <Button fx:id="btEnviar" layoutX="233.0" layoutY="301.0" mnemonicParsing="false" onAction="#geraReceita" text="Enviar">
                <graphic>
