--- a/src/gui/view/ViewCliente.fxml
+++ b/src/gui/view/ViewCliente.fxml
@@ -1,8 +1,10 @@
 <?xml version="1.0" encoding="UTF-8"?>
 
+<?import com.jfoenix.controls.JFXButton?>
+<?import com.jfoenix.controls.JFXSpinner?>
+<?import com.jfoenix.controls.JFXTextField?>
 <?import javafx.scene.control.Button?>
 <?import javafx.scene.control.Label?>
-<?import javafx.scene.control.ProgressIndicator?>
 <?import javafx.scene.control.RadioButton?>
 <?import javafx.scene.control.Tab?>
 <?import javafx.scene.control.TabPane?>
@@ -18,24 +20,11 @@
 <?import javafx.scene.layout.RowConstraints?>
 <?import javafx.scene.text.Font?>
 
-<AnchorPane fx:id="apCentral" maxHeight="50000.0" maxWidth="50000.0" minHeight="0.0" minWidth="0.0" prefHeight="625.0" prefWidth="838.0" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controllers.ViewClienteController">
+<AnchorPane fx:id="apCentral" maxHeight="50000.0" maxWidth="50000.0" minHeight="0.0" minWidth="0.0" prefHeight="625.0" prefWidth="850.0" stylesheets="@css/styleTabCliente.css" xmlns="http://javafx.com/javafx/8.0.171" xmlns:fx="http://javafx.com/fxml/1" fx:controller="gui.controllers.ViewClienteController">
    <children>
-      <GridPane layoutX="662.0" layoutY="561.0" prefHeight="55.0" prefWidth="104.0">
-        <columnConstraints>
-          <ColumnConstraints halignment="CENTER" hgrow="SOMETIMES" minWidth="10.0" prefWidth="100.0" />
-        </columnConstraints>
-        <rowConstraints>
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-          <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-        </rowConstraints>
-         <children>
-            <ProgressIndicator fx:id="piStatus" visible="false" />
-            <Label fx:id="labelStatus" alignment="CENTER" contentDisplay="CENTER" prefHeight="28.0" prefWidth="106.0" textAlignment="CENTER" visible="false" GridPane.rowIndex="1" />
-         </children>
-      </GridPane>
-      <TabPane fx:id="tpCentral" prefHeight="625.0" prefWidth="838.0" side="LEFT" tabClosingPolicy="UNAVAILABLE">
+      <TabPane fx:id="tpCentral" layoutX="-5.0" prefHeight="625.0" prefWidth="863.0" side="LEFT" tabClosingPolicy="UNAVAILABLE">
         <tabs>
-          <Tab fx:id="tabTabela" closable="false" style="-fx-padding: 15 0; -fx-focus-color: transparent;">
+          <Tab fx:id="tabTabela" closable="false">
             <content>
               <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="625.0" prefWidth="781.0">
                      <children>
@@ -178,70 +167,122 @@
                      </children></AnchorPane>
             </content>
                <graphic>
-                  <ImageView fitHeight="59.0" fitWidth="55.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fitHeight="43.0" fitWidth="37.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@../../../../../../../AppData/Local/Temp/icons8_list_200px.png" />
+                        <Image url="@../../model/images/icons8_search_folder_60px_1.png" />
                      </image>
                   </ImageView>
                </graphic>
           </Tab>
-          <Tab fx:id="tabCliente" closable="false" onSelectionChanged="#alteraTamanhoAnchorPane" style="-fx-padding: 15 0; -fx-focus-color: transparent;">
+          <Tab fx:id="tabCliente" closable="false">
             <content>
-              <AnchorPane minHeight="0.0" minWidth="0.0" prefHeight="625.0" prefWidth="909.0">
+              <AnchorPane fx:id="tabClienteAp" minHeight="0.0" minWidth="0.0" prefHeight="625.0" prefWidth="909.0">
                      <children>
-                        <GridPane layoutX="41.0" layoutY="10.0" prefHeight="140.0" prefWidth="347.0" vgap="20.0">
-                          <columnConstraints>
-                            <ColumnConstraints hgrow="SOMETIMES" maxWidth="179.0" minWidth="10.0" prefWidth="87.0" />
-                            <ColumnConstraints hgrow="SOMETIMES" maxWidth="260.0" minWidth="10.0" prefWidth="260.0" />
-                          </columnConstraints>
-                          <rowConstraints>
-                            <RowConstraints />
-                            <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                              <RowConstraints minHeight="10.0" prefHeight="30.0" vgrow="SOMETIMES" />
-                          </rowConstraints>
-                           <children>
-                              <TextField fx:id="txtNomeCliente" promptText="Nome do cliente" GridPane.columnIndex="1" GridPane.rowIndex="1" />
-                              <TextField fx:id="txtEmailCliente" promptText="Email do cliente" GridPane.columnIndex="1" GridPane.rowIndex="2" />
-                              <TextField fx:id="txtRedeSocialCliente" promptText="Rede Social do cliente" GridPane.columnIndex="1" GridPane.rowIndex="3" />
-                              <TextField fx:id="txtTelefoneCliente" promptText="Telefone do cliente" GridPane.columnIndex="1" GridPane.rowIndex="4" />
-                              <Label prefHeight="17.0" prefWidth="67.0" text="Telefone:" GridPane.rowIndex="4" />
-                              <Label prefHeight="17.0" prefWidth="43.0" text="Email:" GridPane.rowIndex="2" />
-                              <Label text="Nome:" GridPane.rowIndex="1" />
-                              <Label text="Rede Social:" GridPane.rowIndex="3" />
-                           </children>
-                        </GridPane>
-                        <Label layoutX="419.0" layoutY="132.0" text="Campo mínimo: Nome" textFill="#ae0000" />
-                        <Button fx:id="btCriaCliente" layoutX="417.0" layoutY="25.0" mnemonicParsing="false" onAction="#onBtCriaClienteAction" text="Criar">
+                        <Label layoutX="171.0" layoutY="44.0" text="Campo mínimo: Nome" textFill="RED">
+                           <font>
+                              <Font name="System Bold" size="12.0" />
+                           </font></Label>
+                        <JFXButton fx:id="btCriaCliente" layoutX="52.0" layoutY="422.0" onAction="#onBtCriaClienteAction" prefHeight="44.0" prefWidth="111.0" ripplerFill="WHITE" text="Criar" textFill="WHITE">
+                           <font>
+                              <Font name="System Bold" size="18.0" />
+                           </font>
                            <graphic>
                               <ImageView fitHeight="30.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
-                                    <Image url="@../../model/images/icons8_add_96px_1.png" />
+                                    <Image url="@../../model/images/add_30px.png" />
                                  </image>
                               </ImageView>
                            </graphic>
-                        </Button>
-                        <Button fx:id="btAtualizaCliente" layoutX="417.0" layoutY="73.0" mnemonicParsing="false" onAction="#atualizaCadastro" prefHeight="38.0" prefWidth="132.0" text="Atualizar dados">
+                        </JFXButton>
+                        <JFXButton fx:id="btAtualizaCliente" layoutX="173.0" layoutY="422.0" onAction="#atualizaCadastro" prefHeight="41.0" prefWidth="204.0" ripplerFill="WHITE" text="Atualizar dados" textFill="WHITE">
                            <graphic>
                               <ImageView fitHeight="30.0" fitWidth="50.0" pickOnBounds="true" preserveRatio="true">
                                  <image>
-                                    <Image url="@../../model/images/icons8_restart_96px_1.png" />
+                                    <Image url="@../../model/images/icons8_reset_64px.png" />
                                  </image>
                               </ImageView>
                            </graphic>
-                        </Button>
+                           <font>
+                              <Font name="System Bold" size="18.0" />
+                           </font>
+                        </JFXButton>
+                        <Label layoutX="102.0" layoutY="37.0" text="Nome:" textFill="WHITE">
+                           <font>
+                              <Font name="System Bold" size="19.0" />
+                           </font>
+                        </Label>
+                        <ImageView fitHeight="43.0" fitWidth="41.0" layoutX="58.0" layoutY="23.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../../model/images/icons8_businesswoman_60px.png" />
+                           </image>
+                        </ImageView>
+                        <JFXTextField fx:id="txtNomeCliente" focusColor="WHITE" layoutX="59.0" layoutY="62.0" prefHeight="0.0" prefWidth="311.0" promptText="Nome do cliente" style="-fx-border-color: #545E6A; -fx-text-fill: white; -fx-prompt-text-fill: #e1e1e1; -fx-background-color: #545E6A; -fx-background-radius: 0.5em; -fx-border-radius: 0.5em;" unFocusColor="#2c2e33">
+                           <font>
+                              <Font name="System Bold" size="17.0" />
+                           </font>
+                        </JFXTextField>
+                        <JFXTextField fx:id="txtEmailCliente" focusColor="WHITE" layoutX="61.0" layoutY="153.0" prefHeight="0.0" prefWidth="311.0" promptText="Email do cliente" style="-fx-border-color: #545E6A; -fx-text-fill: white; -fx-prompt-text-fill: #e1e1e1; -fx-background-color: #545E6A; -fx-background-radius: 0.5em; -fx-border-radius: 0.5em;" unFocusColor="#2c2e33">
+                           <font>
+                              <Font name="System Bold" size="17.0" />
+                           </font>
+                        </JFXTextField>
+                        <Label layoutX="110.0" layoutY="128.0" text="Email:" textFill="WHITE">
+                           <font>
+                              <Font name="System Bold" size="19.0" />
+                           </font>
+                        </Label>
+                        <ImageView fitHeight="37.0" fitWidth="43.0" layoutX="64.0" layoutY="118.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../../model/images/icons8_important_mail_60px.png" />
+                           </image>
+                        </ImageView>
+                        <JFXTextField fx:id="txtRedeSocialCliente" focusColor="WHITE" layoutX="64.0" layoutY="257.0" prefHeight="15.0" prefWidth="311.0" promptText="Rede Social do cliente" style="-fx-border-color: #545E6A; -fx-text-fill: white; -fx-prompt-text-fill: #e1e1e1; -fx-background-color: #545E6A; -fx-background-radius: 0.5em; -fx-border-radius: 0.5em;" unFocusColor="#2c2e33">
+                           <font>
+                              <Font name="System Bold" size="17.0" />
+                           </font>
+                        </JFXTextField>
+                        <Label layoutX="110.0" layoutY="231.0" text="Rede Social:" textFill="WHITE">
+                           <font>
+                              <Font name="System Bold" size="19.0" />
+                           </font>
+                        </Label>
+                        <ImageView fitHeight="43.0" fitWidth="41.0" layoutX="63.0" layoutY="215.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../../model/images/icons8_instagram_60px.png" />
+                           </image>
+                        </ImageView>
+                        <JFXTextField fx:id="txtTelefoneCliente" focusColor="WHITE" layoutX="65.0" layoutY="355.0" prefHeight="0.0" prefWidth="311.0" promptText="Telefone do cliente" style="-fx-border-color: #545E6A; -fx-text-fill: white; -fx-prompt-text-fill: #e1e1e1; -fx-background-color: #545E6A; -fx-background-radius: 0.5em; -fx-border-radius: 0.5em;" unFocusColor="#2c2e33">
+                           <font>
+                              <Font name="System Bold" size="17.0" />
+                           </font>
+                        </JFXTextField>
+                        <Label layoutX="110.0" layoutY="329.0" text="Telefone:" textFill="WHITE">
+                           <font>
+                              <Font name="System Bold" size="19.0" />
+                           </font>
+                        </Label>
+                        <ImageView fitHeight="40.0" fitWidth="47.0" layoutX="65.0" layoutY="314.0" pickOnBounds="true" preserveRatio="true">
+                           <image>
+                              <Image url="@../../model/images/icons8_phone_64px.png" />
+                           </image>
+                        </ImageView>
                      </children></AnchorPane>
             </content>
                <graphic>
-                  <ImageView fitHeight="72.0" fitWidth="57.0" pickOnBounds="true" preserveRatio="true">
+                  <ImageView fitHeight="46.0" fitWidth="45.0" pickOnBounds="true" preserveRatio="true">
                      <image>
-                        <Image url="@../../model/images/icons8_businesswoman_48px.png" />
+                        <Image url="@../../model/images/icons8_businesswoman_60px_2.png" />
                      </image>
                   </ImageView>
                </graphic>
           </Tab>
         </tabs>
       </TabPane>
+      <Pane layoutY="119.0" prefHeight="507.0" prefWidth="68.0" style="-fx-background-color: 4c7fff;">
+         <children>
+            <JFXSpinner fx:id="piStatus" layoutX="9.0" layoutY="418.0" />
+         </children>
+      </Pane>
+      <Pane prefHeight="6.0" prefWidth="68.0" style="-fx-background-color: ff5b5b;" />
    </children>
 </AnchorPane>
