--- a/src/gui/view/css/styleTabCliente.css
+++ b/src/gui/view/css/styleTabCliente.css
@@ -1,4 +1,4 @@
-#tabClienteAp{
+#tabClienteAp, #tabTabelaAp, #tabReplaceAp{
 	-fx-background-color: #2c2e33;
 }
 
@@ -9,15 +9,18 @@
 	-fx-border-color:  #e1e1e1;
 }
 
-#btAtualizaCliente{
+#btAtualizaCliente, #btPesquisar{
 	-fx-background-color: #4c7fff;
 	-fx-background-radius: 5em;
 	-fx-border-radius: 5em;
 	-fx-border-color:  #e1e1e1;
 }
 
-#btExcluiCliente:pressed{
+#btExcluiCliente, #btLimpar{
 	-fx-background-color: #ff4747;
+	-fx-background-radius: 5em;
+	-fx-border-radius: 5em;
+	-fx-border-color:  #e1e1e1;
 }
 
 #piStatus{
@@ -32,7 +35,7 @@
 .tab:selected {
 	-fx-border-style: solid none none none;
 	-fx-border-width: 8;
-	-fx-border-color: #2c2e33;  
+	-fx-border-color: #4c7fff;  
 	-fx-background-insets: 0.0;
     -fx-background-radius: 0.0;
     -fx-padding: 15 0 15 0;
