--- a/bin/gui/view/ViewLogin.fxml
+++ b/bin/gui/view/ViewLogin.fxml
@@ -73,9 +73,9 @@
          </graphic>
       </JFXButton>
       <Circle fx:id="circuloProfile" fill="#1f93ff" layoutX="499.0" layoutY="67.0" radius="59.0" stroke="BLACK" strokeType="INSIDE" style="-fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);" />
-      <Label layoutX="614.0" layoutY="2.0" prefHeight="30.0" prefWidth="106.0" style="-fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);" text="Versão 2.5" textFill="WHITE">
+      <Label layoutX="640.0" layoutY="-2.0" prefHeight="30.0" prefWidth="77.0" style="-fx-effect: dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);" text="Version 2.5" textFill="WHITE">
          <font>
-            <Font name="System Bold" size="20.0" />
+            <Font name="System Bold" size="14.0" />
          </font>
       </Label>
    </children>
