--- a/src/gui/views/css/styleTabFuncionario.css
+++ b/src/gui/views/css/styleTabFuncionario.css
@@ -1,37 +1,31 @@
 #tabFuncionarioAp, #tabReplaceAp{
 	-fx-background-color: #2c2e33;
-	-fx-border-color: transparent transparent transparent  #ff5b5b;
 	-fx-border-width: 8;
-	-fx-effect:  dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);
+	-fx-effect:  dropshadow(three-pass-box, rgba(0.8,0.8,0.8,0.8), 10, 0, 0, 0);
 }
 
-#btCriaCliente{
+#btCriaFuncionario{
 	-fx-background-color: #04C582;
 	-fx-background-radius: 5em;
 	-fx-border-radius: 5em;
 	-fx-border-color:  #e1e1e1;
+	 -fx-effect:  dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);
 }
 
-#btAtualizaCliente, #btPesquisar{
+#btAtualizaFuncionario{
 	-fx-background-color: #4c7fff;
 	-fx-background-radius: 5em;
 	-fx-border-radius: 5em;
 	-fx-border-color:  #e1e1e1;
+	-fx-effect:  dropshadow(three-pass-box, rgba(0.0,0.0,0.0,0.8), 10.0, 0.0, 0.0, 0.0);
 }
 
-#btExcluiCliente, #btLimpar{
+#btExcluiFuncionario{
 	-fx-background-color: #ff4747;
 	-fx-background-radius: 5em;
 	-fx-border-radius: 5em;
 	-fx-border-color:  #e1e1e1;
-}
-
-#piStatus{
-	-fx-stroke: #ff5b5b;
-}
-
-#btPesquisar:pressed,  #btCriaCliente:pressed{
-	-fx-background-color: #00ff94;
+	 -fx-effect:  dropshadow(three-pass-box, rgba(0.0,0.0,0.0,0.8), 10.0, 0.0, 0.0, 0.0);
 }
 
 .tab-pane{
@@ -49,7 +43,6 @@
 }
 
 .tab {
-	
 	-fx-border-style: solid none none none;
 	-fx-border-width: 8;
 	-fx-border-color: transparent;
@@ -69,5 +62,4 @@
 	-fx-border-radius: 0.5em;
 	-fx-border-color:  #e1e1e1;
 	-fx-effect:  dropshadow(three-pass-box, rgba(0,0,0,0.8), 10, 0, 0, 0);
-	-fx-font: bold 16px System;
 }
